// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`clearRefinements() cssClasses should allow overriding css classes 1`] = `
Object {
  "button": "ais-ClearRefinements-button myButton myPrimaryButton",
  "disabledButton": "ais-ClearRefinements-button--disabled disabled",
  "root": "ais-ClearRefinements myRoot",
}
`;

exports[`clearRefinements() with refinements calls twice ReactDOM.render(<ClearAll props />, container) 1`] = `
<ClearRefinements
  cssClasses={
    Object {
      "button": "ais-ClearRefinements-button",
      "disabledButton": "ais-ClearRefinements-button--disabled",
      "root": "ais-ClearRefinements",
    }
  }
  hasRefinements={true}
  refine={[Function]}
  templateProps={
    Object {
      "templates": Object {
        "resetLabel": "Clear all refinements",
      },
      "templatesConfig": Object {},
      "useCustomCompileOptions": Object {
        "resetLabel": false,
      },
    }
  }
/>
`;

exports[`clearRefinements() with refinements calls twice ReactDOM.render(<ClearAll props />, container) 2`] = `
<ClearRefinements
  cssClasses={
    Object {
      "button": "ais-ClearRefinements-button",
      "disabledButton": "ais-ClearRefinements-button--disabled",
      "root": "ais-ClearRefinements",
    }
  }
  hasRefinements={true}
  refine={[Function]}
  templateProps={
    Object {
      "templates": Object {
        "resetLabel": "Clear all refinements",
      },
      "templatesConfig": Object {},
      "useCustomCompileOptions": Object {
        "resetLabel": false,
      },
    }
  }
/>
`;

exports[`clearRefinements() without refinements calls twice ReactDOM.render(<ClearRefinements props />, container) 1`] = `
<ClearRefinements
  cssClasses={
    Object {
      "button": "ais-ClearRefinements-button",
      "disabledButton": "ais-ClearRefinements-button--disabled",
      "root": "ais-ClearRefinements",
    }
  }
  hasRefinements={false}
  refine={[Function]}
  templateProps={
    Object {
      "templates": Object {
        "resetLabel": "Clear all refinements",
      },
      "templatesConfig": Object {},
      "useCustomCompileOptions": Object {
        "resetLabel": false,
      },
    }
  }
/>
`;

exports[`clearRefinements() without refinements calls twice ReactDOM.render(<ClearRefinements props />, container) 2`] = `
<ClearRefinements
  cssClasses={
    Object {
      "button": "ais-ClearRefinements-button",
      "disabledButton": "ais-ClearRefinements-button--disabled",
      "root": "ais-ClearRefinements",
    }
  }
  hasRefinements={false}
  refine={[Function]}
  templateProps={
    Object {
      "templates": Object {
        "resetLabel": "Clear all refinements",
      },
      "templatesConfig": Object {},
      "useCustomCompileOptions": Object {
        "resetLabel": false,
      },
    }
  }
/>
`;
